boreal/tests/assets/invalid_files/parsing/empty_regex.yar
// [error: syntax error]
rule a {
    strings:
        $a = //
    condition:
        $a
}
